editor/test/resources/errors_project/errors/syntax_error.script
function on_message(self, message_id, message, sender)
endd
